user/connexion inscription/verifmail

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "mmo/faker-images": "^0.2.0",
         "sensio/framework-extra-bundle": "^5.1",
         "stof/doctrine-extensions-bundle": "^1.4",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.4.*",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
@@ -31,6 +32,7 @@
         "symfony/validator": "4.4.*",
         "symfony/web-link": "4.4.*",
         "symfony/yaml": "4.4.*",
+        "symfonycasts/verify-email-bundle": "^1.0",
         "vich/uploader-bundle": "^1.14"
     },
     "require-dev": {
