--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
-/.env
+# /.env
 /public/bundles/
 /public/media/
 /public/images/
