--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,10 +1,15 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
-
-        # IMPORTANT: You MUST configure your server version,
-        # either here or in the DATABASE_URL env var (see .env file)
-        #server_version: '5.7'
+        dbname: "%env(DB_NAME)%"
+        host: "%env(DB_HOST)%"
+        port: "%env(DB_PORT)%"
+        user: "%env(DB_USER)%"
+        password: "%env(DB_PASS)%"
+        driver: pdo_pgsql
+        # url: "%env(resolve:DATABASE_URL)%"
+    # IMPORTANT: You MUST configure your server version,
+    # either here or in the DATABASE_URL env var (see .env file)
+    # server_version: '13.3'
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
