--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,12 +1,12 @@
 doctrine:
     dbal:
-        dbname: "%env(DB_NAME)%"
-        host: "%env(DB_HOST)%"
-        port: "%env(DB_PORT)%"
-        user: "%env(DB_USER)%"
-        password: "%env(DB_PASS)%"
+        # dbname: "%env(DB_NAME)%"
+        # host: "%env(DB_HOST)%"
+        # port: "%env(DB_PORT)%"
+        # user: "%env(DB_USER)%"
+        # password: "%env(DB_PASS)%"
         driver: pdo_pgsql
-        # url: "%env(resolve:DATABASE_URL)%"
+        url: "%env(resolve:DATABASE_URL)%"
     # IMPORTANT: You MUST configure your server version,
     # either here or in the DATABASE_URL env var (see .env file)
     # server_version: '13.3'
