--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-gd": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.9",
         "dompdf/dompdf": "^0.8.5",
         "fzaninotto/faker": "^1.9",
         "guzzlehttp/guzzle": "^7.3",
@@ -19,7 +20,6 @@
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.4.*",
         "symfony/console": "4.4.*",
-        "symfony/dotenv": "4.4.*",
         "symfony/expression-language": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "4.4.*",
@@ -47,7 +47,8 @@
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*"
+        "symfony/test-pack": "*",
+        "symfony/dotenv": "4.4.*"
     },
     "config": {
         "preferred-install": {
